# Life_of_anthill

./: CMakeLists.txt  Life_of_anthill  README.md  ant.cpp  ant.h  colony.cpp  colony.h  enemy.cpp  enemy.h  farmer.cpp  farmer.h  main.cpp  queen.h  role.cpp  role.h  soldier.cpp  soldier.h
